Render choices on YMap and fix styles on mobile devices

--- a/cities/src/components/Map/index.scss
+++ b/cities/src/components/Map/index.scss
@@ -1,4 +1,5 @@
 .map {
+  margin: 0 auto;
   width: 600px;
   height: 400px;
 }
@@ -6,5 +7,11 @@
 @media screen and (max-width: 375px) {
   .map {
     width: 330px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .map {
+    margin: 0 auto;
   }
 }
